<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">
        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:backgroundTint="@color/black"
            app:cardCornerRadius="100dp"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photo"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom"
            android:layout_marginTop="50dp"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="238dp"
        tools:ignore="MissingConstraints">
       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_marginTop="10dp"
           android:layout_height="wrap_content"
           android:backgroundTint="@color/white"
           app:cardCornerRadius="20dp">
           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ima"
               android:padding="45dp"/>
       </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:layout_marginTop="10dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text"
                    android:textColor="@color/black"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="65dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nom"
                    android:textColor="@color/red"
                    android:layout_marginTop="80dp"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/biblio"
                android:textAlignment="center"
                android:layout_marginTop="120dp"
                android:textColor="@color/black"/>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white">

            <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/cv"
               android:layout_marginLeft="125dp"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Telecharger CV"
                android:layout_marginTop="50dp"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/red"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contacter Moi"
                android:layout_marginLeft="240dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/black"
                android:backgroundTint="@color/white"/>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/formations"
                android:textSize="25dp"
                android:textColor="@color/black"
                android:layout_marginLeft="130dp"
                android:layout_marginTop="20dp"/>
            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/red"
                android:layout_marginLeft="180dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/barr"
                    android:layout_width="8dp"
                    android:layout_height="260dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/white"></View>

                <LinearLayout
                    android:id="@+id/formation_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="10dp"

                        android:layout_height="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:backgroundTint="@color/red"
                        app:cardCornerRadius="5dp"></androidx.cardview.widget.CardView>


                    <View

                        android:layout_width="55dp"
                        android:layout_height="5dp"

                        android:layout_marginTop="40dp"
                        android:background="@color/white"></View>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/cadrerouge"
                        android:text="PCSM science de la matiére
                 Université de Dakar (2017 - 2020)"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20dp"></TextView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/formation_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/formation_1"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="10dp"

                        android:layout_height="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="40dp"
                        android:backgroundTint="@color/red"
                        app:cardCornerRadius="5dp"></androidx.cardview.widget.CardView>


                    <View

                        android:layout_width="55dp"
                        android:layout_height="5dp"

                        android:layout_marginTop="40dp"
                        android:background="@color/white"></View>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/cadrerouge"
                        android:text="PCSM science de la matiére
                 Université de Dakar (2017 - 2020)"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20dp"></TextView>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/formation_3"
                    android:layout_below="@id/formation_2">

                    <androidx.cardview.widget.CardView
                        android:layout_marginLeft="10dp"

                        android:layout_marginTop="40dp"
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:backgroundTint="@color/red"
                        app:cardCornerRadius="5dp"></androidx.cardview.widget.CardView>


                    <View

                        android:layout_width="55dp"
                        android:layout_height="5dp"
                        android:layout_marginTop="40dp"
                        android:background="@color/white"></View>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"

                        android:background="@drawable/cadrerouge"
                        android:text="PCSM science de la matiére
                 Université de Dakar (2017 - 2020)"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20dp"></TextView>

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diplomes"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="20dp"/>
        <ProgressBar

            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:layout_marginLeft="180dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/barr1"
                android:layout_width="8dp"
                android:layout_height="260dp"
                android:layout_marginLeft="10dp"
                android:background="@color/white"></View>


            <LinearLayout
                android:id="@+id/diplome_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"

                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/red"
                    app:cardCornerRadius="5dp"></androidx.cardview.widget.CardView>


                <View

                    android:layout_width="55dp"
                    android:layout_height="5dp"

                    android:layout_marginTop="40dp"
                    android:background="@color/white"></View>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/cadrerouge"
                    android:text="PCSM science de la matiére
                 Université de Dakar (2017 - 2020)"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"></TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/diplome_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/diplome_1"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="10dp"

                    android:layout_height="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="40dp"
                    android:backgroundTint="@color/red"
                    app:cardCornerRadius="5dp"></androidx.cardview.widget.CardView>


                <View

                    android:layout_width="55dp"
                    android:layout_height="5dp"

                    android:layout_marginTop="40dp"
                    android:background="@color/white"></View>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/cadrerouge"
                    android:text="PCSM science de la matiére
                 Université de Dakar (2017 - 2020)"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"></TextView>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/diplome_3"
                android:layout_below="@id/diplome_2">

                <androidx.cardview.widget.CardView
                    android:layout_marginLeft="10dp"

                    android:layout_marginTop="40dp"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:backgroundTint="@color/red"
                    app:cardCornerRadius="5dp"></androidx.cardview.widget.CardView>


                <View

                    android:layout_width="55dp"
                    android:layout_height="5dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/white"></View>

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"

                    android:background="@drawable/cadrerouge"
                    android:text="PCSM science de la matiére
                 Université de Dakar (2017 - 2020)"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"></TextView>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>